# page-the-ai-companion

./: .gitignore  README.md  ai_companion.py  chat.py  pyproject.toml  test_extraction.py  test_reminders.py
src/ai_companion/: __init__.py  chat.py  cli.py  config.py  reminders.py
tests/: test_reminders.py
